--- a/Padhale - Website for College/assets/css/darkstyle.css
+++ b/Padhale - Website for College/assets/css/darkstyle.css
@@ -820,6 +820,11 @@ section {
   color: #d5d5d5;
 }
 
+.container,
+.section-title > p {
+  color: #d5d5d5;
+}
+
 .services .icon-box {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   padding: 50px 30px;
@@ -1392,6 +1397,43 @@ section {
 .container > .playlists > .card > .title {
   text-align: center;
   font-size: medium;
+}
+
+.inner-page .container p {
+  color: #7fb1cf;
+}
+
+.book-box {
+  background-color: #131720;
+  border-radius: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  width: 50vw;
+  border: 3px #283a5ae6 solid;
+  border-style: none solid;
+  margin-top: 40px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 8px 12px;
+  transition: ease-in 1s;
+}
+
+.inner-page .book-box .theory > h2 {
+  margin-top: -10px;
+}
+
+.book-box:hover {
+  transform: scale(1.1);
+}
+
+.book-box > a > button {
+  margin-right: 40px;
+  padding: 8px 12px;
+  background-color: #0f1520;
+  color: #80e7fe;
+  border: solid whitesmoke 1px;
+  border-radius: 15px;
+  font-family: sans-serif;
 }
 
 /* #Responsive Design */
