--- a/Padhale - Website for College/assets/css/darkstyle.css
+++ b/Padhale - Website for College/assets/css/darkstyle.css
@@ -802,7 +802,8 @@ section {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   padding: 50px 30px;
   transition: all ease-in-out 0.4s;
-  background: #181818;
+  background-image: linear-gradient(to right,rgb(26, 26, 26),rgba(84, 84, 84, 0.251));
+  border-radius: 20px;
 }
 
 .services .icon-box .icon {
@@ -827,7 +828,7 @@ section {
 }
 
 .services .icon-box p {
-  color: #d5d5d5;
+  color: #eceff0;
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
